# HappySquare

./: CMakeLists.txt  README.md  build.bat  build.sh  bullet.h  common.h  comp.sh  entity.h  game  game.h  main.cpp  player.cpp
source/: bullet.cpp  enemy.cpp  enemy.h  entity.cpp  game.cpp
sources/: bullet.cpp  bullet.h  common.h  enemy.cpp  enemy.h  entity.cpp  entity.h  game  game.cpp  game.h  main.cpp  player.cpp  player.h
нейронка/: bullet.h  common.h  enemy.cpp  entity.h  game.cpp  main.cpp  player.cpp
